--- a/qml.qrc
+++ b/qml.qrc
@@ -36,5 +36,6 @@
         <file>mycomponent/ItemView.qml</file>
         <file>mycomponent/TreeItemsList.qml</file>
         <file>mycomponent/ButtonSt.qml</file>
+        <file>index.html</file>
     </qresource>
 </RCC>
